--- a/index.html
+++ b/index.html
@@ -12,19 +12,16 @@
     <p><a href="https://www.w3schools.com">Visit W3Schools</a></p>
 
     <h1>Picture local/web cats</h1>
-    <p>This is Reddit Cat <br>
-        <img src="https://external-preview.redd.it/i6L4bq2eE5XOUaXeXx-X514hyWEx_2B6_2oQzgCfnIY.jpg?auto=webp&s=d8e8d908941b24e213dc232a0ad5c863a8ef2b54"
-            alt="Reddit Cat" style="width:150px;height:150px;">
-    </p>
-    <p> This is Local Cat <br>
-        <img src="photos/kitty.webp" alt="Local Cat" style="width:150px;height:150px;">
-    </p>
+    <p class="picture_label">This is Reddit Cat</p>
+    <img src="https://external-preview.redd.it/i6L4bq2eE5XOUaXeXx-X514hyWEx_2B6_2oQzgCfnIY.jpg?auto=webp&s=d8e8d908941b24e213dc232a0ad5c863a8ef2b54"
+        alt="Reddit Cat" style="width:150px;height:150px;">
+
 
 
     <h1>Pretty Colors</h1>
-    <p>This text should be red</p>
-    <p>This text should be green</p>
-    <p>This text should be blue</p>
+    <p style="color: red;">This text should be red</p>
+    <p style="color: green;">This text should be green</p>
+    <p style="color: blue;">This text should be blue</p>
 
     <h1>My first Javascript program!</h1>
 
