--- a/index.html
+++ b/index.html
@@ -7,23 +7,43 @@
     <head>
         <link rel="stylesheet" href="default.css">
     </head>
+    <!-- <div class="flex-mainWin"> -->
+        <div class="flex-item">
+            <h1>Links</h1>
+        </div>
+        <div class="flex-item">
+            <a href="https://cbehney.github.io/mySite_1/">GitHubSite</a>
+        </div>
+        <div class="flex-item">
+            <a href="testFlex.html">Flex</a>
+        </div>
+        <div class="flex-item">
+            <a href="testAnimation.html">Animation</a>
+        </div>
+        <div class="flex-item">
+            <a href="testTransition.html">Transition</a>
+        </div>
+        <div class="flex-item">
+            <a href="testFlex.html">Flex</a>
+        </div>
+        <div class="flex-item">
+            <a href="testJavascript.html">Javascript</a>
+        </div>
+    <!-- </div> -->
 
-    <h1>Link to a website</h1>
-    <p><a href="https://www.w3schools.com">Visit W3Schools</a></p>
-
-    <h1>Picture local/web cats</h1>
+    <h1>Cat </h1>
     <p class="picture_label">This is Reddit Cat</p>
     <img src="https://external-preview.redd.it/i6L4bq2eE5XOUaXeXx-X514hyWEx_2B6_2oQzgCfnIY.jpg?auto=webp&s=d8e8d908941b24e213dc232a0ad5c863a8ef2b54"
         alt="Reddit Cat" style="width:150px;height:150px;">
 
 
 
-    <h1>Pretty Colors</h1>
+    <h1>Colors</h1>
     <p style="color: red;">This text should be red</p>
     <p style="color: green;">This text should be green</p>
     <p style="color: blue;">This text should be blue</p>
 
-    <h1>My first Javascript program!</h1>
+    </div>
 
 
 </body>
