Update to UI on Index

--- a/index.html
+++ b/index.html
@@ -7,16 +7,17 @@
     <head>
         <link rel="stylesheet" href="default.css">
     </head>
-    <!-- <div class="flex-mainWin"> -->
-        <div class="flex-item">
-            <h1>Links</h1>
-        </div>
-        <div class="flex-item">
-            <a href="https://cbehney.github.io/mySite_1/">GitHubSite</a>
-        </div>
-        <div class="flex-item">
-            <a href="testFlex.html">Flex</a>
-        </div>
+    <div class="flex-container">
+        
+            <a href="https://cbehney.github.io/mySite_1/">
+                <div class="flex-item">GitHub Site</div>
+            </a>
+        
+            <a href="testFlex.html">
+                <div class="flex-item">Flex</div>
+            </a>
+
+
         <div class="flex-item">
             <a href="testAnimation.html">Animation</a>
         </div>
@@ -29,7 +30,7 @@
         <div class="flex-item">
             <a href="testJavascript.html">Javascript</a>
         </div>
-    <!-- </div> -->
+    </div>
 
     <h1>Cat </h1>
     <p class="picture_label">This is Reddit Cat</p>
